<resources>
    <string name="app_name">Rarog-CountBook</string>
    <string name="addCounterNameHint">Your Counter Name</string>
    <string name="addCounterNameTextView">Counter Name</string>
    <string name="addCounterCommentHint">Your Comment</string>
    <string name="addCounterCommentTextView">Counter Comment</string>
    <string name="addCounterValueHinter">Initial Value</string>
    <string name="addCounterValueTextView">Initial Counter Value</string>
    <string name="required"> * Required</string>
    <string name="create_counter_text_name">Create Counter</string>
    <string name="name">Name:</string>
    <string name="comment">Comment:</string>
    <string name="date_last_edited">Date last edited:</string>
    <string name="current_value">Current Value:</string>
    <string name="initial_value">Initial Value:</string>
</resources>
