<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rarog_countbook.EditCounterActivity">

    <TextView
        android:id="@+id/editNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/editNameField" />

    <EditText
        android:id="@+id/editNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/editNameText"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/editCommentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/comment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/editCommentField" />

    <EditText
        android:id="@+id/editCommentField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/editCommentText"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.281"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editNameField" />

    <TextView
        android:id="@+id/editCurrentValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/current_value"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/editCurrentValueField" />

    <EditText
        android:id="@+id/editCurrentValueField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editCommentField"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.47" />

    <TextView
        android:id="@+id/editInitialValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/initial_value"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/editInitialValueField" />

    <EditText
        android:id="@+id/editInitialValueField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/editInitialValueText"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.244"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editCurrentValueField" />

    <Button
        android:id="@+id/saveEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="Save"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/editInitialValueText"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>
